--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PRINTER=HP_LaserJet_MFP_M426fdw__BF8D0D_
+PRINTER=Brother HL-5450DN series
 OP_URL=https://orders-backend.printverse.com/apis
+IP_URL=https://iprint.printverse.com/apis
