--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
   "dependencies": {
     "axios": "^0.26.0",
     "dotenv": "^16.0.0",
+    "imagemagick": "^0.1.3",
+    "log4js": "^6.4.2",
     "nan": "^2.14.1",
-    "prebuild-install": "^5.3.4"
+    "prebuild-install": "^5.3.4",
+    "simple-node-logger": "^21.8.12"
   }
 }
